Обновлен контроллер счетчика корзины: добавлено новое поле для отображения стоимости доставки и итоговой суммы. Реализована логика обновления этих значений при загрузке данных из API. Обновлены шаблоны для поддержки нового функционала мини-корзины, включая отображение доставки и итоговой суммы. Улучшено взаимодействие с пользователем за счет добавления спиннера во время загрузки данных.

--- a/templates/catalog/layouts/header.html.twig
+++ b/templates/catalog/layouts/header.html.twig
@@ -218,7 +218,7 @@
           <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/></svg>
         </button>
       </div>
-      <div class="p-2 max-h-96 overflow-y-auto" id="city-modal-list">
+      <div class="max-h-96 min-h-24 overflow-y-auto" id="city-modal-list">
         {{ include('components/spinner.html.twig', {
             id: 'city-modal',
             visible: true,
