Обновлен контроллер оформления заказа для интеграции расчета стоимости доставки и контекста. Изменен шаблон выбора доставки для отображения стоимости на основе данных о доставке. Добавлено руководство по публичным эндпоинтам доставки с фильтрацией по городу и обновлением документации.

--- a/templates/_delivery_selector.html.twig
+++ b/templates/_delivery_selector.html.twig
@@ -27,7 +27,7 @@
     </div>
   </section>
 
-  <div class="text-sm mt-3">Стоимость доставки: <span id="ship-cost">{{ (cart.shippingCost ?? 0) / 100 }}</span> ₽</div>
+  <div class="text-sm mt-3">Стоимость доставки: <span id="ship-cost">{{ (delivery.cost is defined and delivery.cost is not null) ? (delivery.cost / 100) : 0 }}</span> ₽</div>
 </div>
 
 <script type="module">
