Обновлены правила и документация по архитектуре проекта, включая новые разделы о приоритетах правил, взаимодействии с API Platform и логами. Добавлены новые файлы для описания сущностей Doctrine и ключевых сервисов. Обновлены шаблоны для интеграции с Vue и Stimulus, а также добавлены рекомендации по использованию хардкодинга и пагинации. Обновлены существующие файлы с учетом новых требований и улучшений.

--- a/templates/catalog/cart/index.html.twig
+++ b/templates/catalog/cart/index.html.twig
@@ -103,7 +103,7 @@
       </table>
     </div>
 
-    <div class="mt-4" data-module="delivery-methods">
+    <div class="mt-4" data-module="delivery-methods" data-selected-code="{{ deliveryContext.methodCode|default('') }}">
       <div id="delivery-methods" class="p-4 border rounded">
         <div class="font-medium mb-2">Способ доставки</div>
         <div id="delivery-methods-list" class="space-y-2">
